# CodeFormer-BT

./: .gitignore  README.md  inference_codeformer.py  inference_colorization.py  inference_inpainting.py  pyproject.toml  requirements.txt
basicsr/: setup.py
basicsr/utils/: misc.py  video_util.py
