[build-system]
requires = ["setuptools>=61.0", "wheel", "cython", "numpy", "torch>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "basicsr"
version = "1.3.2"
description = "Open Source Image and Video Super-Resolution Toolbox"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Xintao Wang", email = "xintao.wang@outlook.com"}
]
keywords = ["computer vision", "restoration", "super resolution", "face restoration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "addict",
    "future",
    "lmdb",
    "numpy>=2.0.0",
    "opencv-python>=4.10.0",
    "Pillow>=10.4.0",
    "pyyaml",
    "requests",
    "scikit-image>=0.24.0",
    "scipy>=1.14.0",
    "tensorboard>=2.18.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm",
    "yapf",
    "lpips",
    "gdown",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/sczhou/CodeFormer"
Repository = "https://github.com/sczhou/CodeFormer"

[tool.setuptools]
packages = ["basicsr", "basicsr.archs", "basicsr.data", "basicsr.losses", "basicsr.metrics", "basicsr.models", "basicsr.ops", "basicsr.utils", "facelib", "facelib.detection", "facelib.detection.retinaface", "facelib.detection.yolov5face", "facelib.parsing", "facelib.utils"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.pth", "*.yaml", "*.yml"]
